--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(346deg, #686872,pink)
+    background: linear-gradient(346deg, #686872,pink);
+    z-index: 1;
 }
 .App-wrapper-content:after {
     content: '';
@@ -38,7 +39,7 @@
     height: 100%;
     background: linear-gradient(315deg, #2be2c3, #f8ffc0);
     filter: blur(30px);
-    z-index: 1;
+    z-index: 2;
 }
 
 
