--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,12 +1,12 @@
 
-.header{
-    background:linear-gradient(-334deg, pink, #a5c0bd);
-    box-shadow: -206px 14px 155px 32px #ec91e7;
-    grid-area:header;
+.header {
+    grid-area: header;
     padding: 10px;
     align-self: center;
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    box-shadow: 1px 2px 16px 10px rgba(34, 60, 80, 0.27);
 }
 
 .header img {
@@ -14,6 +14,7 @@
     width: 50px;
     border-radius: 50%;
 }
+
 .loginBlock {
 
 }
