--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,42 +1,32 @@
+@import '../../style/variables';
 .nav {
-    background: linear-gradient(100deg, pink, #99e8da);
+    padding: 0 5px 5px 13px;
+    border: 1px solid $border-color;
+    border-top: none;
     grid-area: nav;
+    .sidebar {
+        border-bottom: 2px solid $border-color ;
+        margin-bottom: 10px;
+        .item {
+            font-weight: 500;
+            & a {
+                opacity: 1;
+                padding: 10px 12px 10px 12px;
+                border-radius: 5px;
+            }
+            .active {
+                color: $active-fontColor;
+                background-color: $profile-primaty;
+            }
+
+        }
+    }
+    .sidebarFriends {
+        padding: 5px 5px 5px 13px;
+        & *   {
+            padding: 10px 0 10px 0;
+        }
+    }
 }
 
-.nav .item {
-    padding: 15px 10px 10px 10px;
-}
 
-.nav .item:last-child {
-    padding: 15px 10px 10px 10px;
-}
-
-.item a {
-    text-decoration: none;
-}
-
-.item a:active {
-    color: black;
-}
-
-.item a.active {
-    font-size: 20px;
-    color: #11605f;
-}
-
-
-.grid {
-    display: grid;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas:
-            'ava ava ava'
-            'user user user';
-}
-.friendName {
-    display: block;
-    font-size: 26px;
-    text-decoration: none;
-    text-align: center;
-    margin-bottom: 10px;
-}
