--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,5 +1,5 @@
 @import "../../style/variables";
-@import "../../style/mixins";
+@import "../../style/mix";
 .header {
   background-color: $profile-primaty;
   grid-area: header;
@@ -7,8 +7,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 10px 20px 10px 20px;
   .navBurger{
-    df
+    @include flex (center,space-between,row);
     .burger {
       position: relative;
       input {
@@ -61,12 +62,22 @@
       font-family: 'Pacifico', cursive;
       font-size: 22px;
       font-weight: 200;
+      margin-left: 30px;
     }
   }
 
   &_loginBlock {
+    @include flex (center,space-between,row);
     & a {
-      color: wheat;
+      color: $primary-font-color;
+      font-weight: 600;
+      line-height: 24px;
+      margin-left: 20px;
+    }
+    & a + a {
+      background-image: $btn-color;
+      border-radius: 8px;
+      padding: 10px;
     }
   }
 }
