--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -4,3 +4,4 @@ $border-color:#424242;
 $active-fontColor:#283DCA;
 $primary-font-color:#E7E7E7;
 $primary-link-color:#A6A6A6;
+$btn-color:  linear-gradient(180deg, rgb(182, 102, 240) 45%, rgba(135, 89, 238, 0.4) 100%);
