--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,6 +1,6 @@
 @import '../../style/variables';
 .nav {
-    padding: 0 5px 5px 13px;
+    padding: 20px 13px 5px 13px;
     border: 1px solid $border-color;
     border-top: none;
     grid-area: nav;
