--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -3,6 +3,7 @@
     padding: 20px 13px 5px 13px;
     border: 1px solid $border-color;
     border-top: none;
+    border-bottom: none;
     grid-area: nav;
     .sidebar {
         border-bottom: 2px solid $border-color ;
