--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -74,7 +74,7 @@
       line-height: 24px;
       margin-left: 20px;
     }
-    & a + a {
+    .register {
       background-image: $btn-color;
       border-radius: 8px;
       padding: 10px;
