--- a/src/components/common/paginaator/paginator.module.scss
+++ b/src/components/common/paginaator/paginator.module.scss
@@ -5,21 +5,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    button {
+        color: white;
+        padding: 11px 16px;
+        text-decoration: none;
+        transition: background-color .3s;
+        border: 1px solid #ddd;
+        background: #18191A;
+        &:hover {
+            background-color: #4CAF50;
+            color: white;
+            border: 1px solid #4CAF50;
+        }
+    }
 }
-.paginator button {
-    color: white;
-    padding: 11px 16px;
-    text-decoration: none;
-    transition: background-color .3s;
-    border: 1px solid #ddd;
-    background: #18191A;
-}
-button:hover {
-    background-color: #4CAF50;
-    color: white;
-    border: 1px solid #4CAF50;
-}
-
 
 .pageNumber {
     color: white;
