--- a/src/pages/profile/ProfileInfo/ProfileInfo.module.scss
+++ b/src/pages/profile/ProfileInfo/ProfileInfo.module.scss
@@ -2,7 +2,7 @@
     position: relative;
     z-index: 10;
     padding: 10px 10px;
-}
-.content li {
-    list-style: none;
+    li {
+        list-style: none;
+    }
 }
