--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -14,7 +14,7 @@
   align-items: stretch;
   grid-gap: 10px;
 }
-.App-wrapper-content {
+.AppWrapperContent {
     grid-area:profile;
     position: relative;
     height: 100%;
