--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,25 +1,14 @@
+@import 'styles/variables.module';
+@import 'styles/mixins.module';
 .App{
-    max-width: 1170px;
-    margin: 0 auto;
-  display: grid;
-  padding: 15px;
-  height: 100vh;
-  /*grid-template-rows: 100px 400px 100px;*/
-  /*grid-template-columns: 1fr 1fr 1fr 1fr ;*/
-  grid:0.5fr 4fr 0.5fr / 1.2fr 2fr 2fr 2fr ;
-  grid-template-areas:
-          'header header header header'
-          'nav profile profile profile'
-          'footer footer footer footer';
-  align-items: stretch;
-  grid-gap: 10px;
+
+  .AppWrapperContent {
+    @include gridContainer(100.8rem, #131315);
+    height: 100vh;
+    padding-top: 85px;
+  }
 }
-.AppWrapperContent {
-    grid-area:profile;
-    position: relative;
-    height: 100%;
-    z-index: 0;
-}
+
 
 
 
