--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -12,7 +12,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 15px;
+        padding: 1.5rem 0;
         font-size: 1.5rem;
 
         img {
@@ -24,7 +24,7 @@
             display: flex;
             justify-content: space-between;
             .login{
-                margin-right: 20px;
+                margin-right: 2rem;
             }
 
         }
