--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,14 @@ html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
 }
-
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+ul {
+    list-style: none;
+}
 body {
     margin: 0;
 }
@@ -101,7 +108,9 @@ button,
 [type="submit"] {
     -webkit-appearance: button;
 }
-
+button {
+    cursor: pointer;
+}
 
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
