--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -1,33 +1,12 @@
 $bgcolor: linear-gradient(180deg, rgba(230, 212, 222, 1) 0%, rgba(152, 144, 199, 1) 100%);
 
 $primary: rgba(33, 33, 36, 7);
-$secondary: rgba(45, 46, 70, 0.5);
+$secondary: #444446;
 $third: rgba(33, 38, 143, 1);
 
 $borderInputColor: rgba(45, 46, 70, 0.2);
 
-$btnBoxShadow:  0px 4px 18px rgba(33, 38, 143, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 $btnActiveColor: rgb(154, 145, 200);
-$btnDangerColor: rgba(241, 69, 61, 1);
 $btnDefaultColor: rgba(215, 216, 239, 1);
 
 
-$boxBgColor: rgb(255, 255, 255);
-$secondBoxBgColor: rgb(236, 236, 249);
-$profileBgColor: rgb(217, 217, 241);
-$secondaryRowColor: rgb(248, 247, 253);
-$optionsColumnColor: rgb(236, 236, 249);
-
-$typoHeader1: normal 600 2.6rem/1.5 Poppins, sans-serif;
-$typoHeader2: normal 500 2.2rem/1.5 Poppins, sans-serif;
-$typoHeader3: normal 500 1.6rem/1.2 Poppins, sans-serif;
-$typoParagraph: normal normal 1.3rem/1.2 SFUIDisplay, sans-serif;
-
-$typoInputs: normal 400 1.6rem/1 Poppins, sans-serif;
-$typoHeader1Forms: normal 600 2.6rem/1.5 Poppins, sans-serif;
-$typoHeader2Forms: normal 500 2.2rem/3.6rem Poppins, sans-serif;
-
-$typoLinkForms: normal 400 1.4rem/1.8rem Poppins, sans-serif;
-$typoDescribeForms: normal 400 1.6rem/2.4rem SFUIDisplay, sans-serif;
-$typoGuideForms: normal 500 1.4rem/1.6rem SFUIDisplay, sans-serif;
-$typoHeader3LinkForms: normal 600 1.6rem/2.4rem Poppins, sans-serif;
