--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,11 +1,10 @@
 @import 'styles/variables.module';
 @import 'styles/mixins.module';
 .App{
-
   .AppWrapperContent {
     @include gridContainer(100.8rem, #131315);
     height: 100vh;
-    padding-top: 85px;
+    padding-top: 8rem;
   }
 }
 
