--- a/src/pages/profile/MyPosts/MyPosts.module.scss
+++ b/src/pages/profile/MyPosts/MyPosts.module.scss
@@ -1,8 +1,6 @@
 .posts {
-    z-index: 10;
-    position: relative;
-    padding: 10px 10px;
     margin: 0;
+    grid-area: posts;
     .createPost {
         display: grid;
         grid-template-rows: 1fr 3fr 1fr;
