--- a/src/pages/profile/ProfileInfo/ProfileInfo.module.scss
+++ b/src/pages/profile/ProfileInfo/ProfileInfo.module.scss
@@ -1,8 +1,48 @@
-.content {
-    position: relative;
-    z-index: 10;
-    padding: 10px 10px;
-    li {
-        list-style: none;
+@import "src/styles/variables.module";
+.avatarBlock {
+    grid-area: avatar;
+    background: $primary;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    img {
+        object-fit: cover;
+    }
+    .inputWrapper {
+        margin-top: 1rem;
+        background: #444446;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .customFileUpload {
+            display: inline-block;
+            padding: 0.6rem 1.2rem;
+            cursor: pointer;
+            font-size: 1.6rem;
+            width: 100%;
+            text-align: center;
+            input[type='file'] {
+                display: none;
+
+            }
+        }
+
+    }
+
+}
+.aboutBlock {
+    grid-area: about;
+    background: $primary;
+    padding: 0.5rem;
+    font-size: 1.6rem;
+    .userName{
+        margin-bottom: 1rem;
+    }
+    .userStatus{
+        margin-bottom: 1rem;
+    }
+    .aboutMe{
+        margin-bottom: 1rem;
     }
 }
